# audiobookfinder

./: .gitignore  .travis.yml  Cargo.toml  Cross.toml  LICENSE  Makefile.toml  README-release.md  README.md  Xargo.toml  appveyor.yml  diag_architecture_general.xml  index.html  pubspec.yaml  search-index.js  settings.html  snapcraft.yaml  source-files.js  xargo.sh
.cargo/: audit.toml  config  config.toml
.github/workflows/: ci.yml  ci_android.yml  ci_ios.yml  ci_macos.yml  ci_prepare_release_github.yml  vulnerability_check.yml
adbfbinlib/: all.html  fn.file_count_good.html  fn.get_own_peer.html  fn.get_ui_messages.html  index.html  sidebar-items.js  struct.AdbflibError.html
adbfbinlib/common/: index.html  sidebar-items.js
adbfbinlib/common/config/: index.html  sidebar-items.js
adbfbinlib/common/logit/: enum.Log.html  fn.read_env_level.html  index.html  sidebar-items.js  struct.Logit.html
adbfbinlib/common/paths/: fn.clean_paths.html  index.html  sidebar-items.js  struct.SearchPath.html
adbfbinlib/ctrl/: enum.CollectionPathAlive.html  enum.Finisher.html  enum.ForwardNetMsg.html  enum.InternalUiMsg.html  enum.NetInfoMsg.html  enum.Status.html  enum.UiUpdateMsg.html  fn.try_open_browser.html  index.html  sidebar-items.js  struct.Ctrl.html  struct.NetStatsMsg.html  struct.UiClientPeer.html
adbfbinlib/ctrl/tui/: enum.AliveSym.html  index.html  sidebar-items.js  static.DEBUG_TEXT_ID.html  static.ID_HOST_ALIVE.html  static.ID_HOST_INDEX.html  static.ID_HOST_NUMBER.html  static.PATHS_PREFIX_ID.html  static.RECT.html  static.SEPARATOR.html  static.STR_ALIVE.html  static.VIEW_LIST_ID.html  struct.AliveDisplayData.html  struct.AliveState.html  struct.Tui.html
adbfbinlib/ctrl/webui/: index.html  sidebar-items.js  struct.WebServerState.html  struct.WebUI.html
adbfbinlib/data/: fn.publish_local_storage.html  fn.search_in_single_path.html  index.html  sidebar-items.js  struct.IFInternalCollectionOutputData.html
adbfbinlib/data/audio_info/: index.html  sidebar-items.js  struct.AudioInfo.html  struct.AudioInfoKey.html  struct.Container.html
adbfbinlib/data/bktree/: fn.osa_distance.html  index.html  sidebar-items.js  struct.BKTree.html  struct.BKTreeNode.html  trait.Distance.html
adbfbinlib/data/collection/: index.html  sidebar-items.js  static.ID3_CAPACITY.html  static.TOLERANCE.html  struct.Collection.html  struct.FilesStat.html  struct.Stats.html  type.FileFn.html
adbfbinlib/data/ipc/: enum.IPC.html  index.html  sidebar-items.js  struct.IFCollectionOutputData.html
adbfbinlib/data/tag_readers/: index.html  sidebar-items.js  struct.CommonAudioInfo.html  struct.FlacTagReader.html  struct.ID3TagReader.html  struct.MP3TagReader.html  struct.MP4TagReader.html  trait.TagReader.html
adbfbinlib/forwarder/: fn.create_net_runtime.html  fn.ffi_file_count_good.html  fn.ffi_ui_messages_as_json.html  index.html  sidebar-items.js  struct.NET_RUNTIME.html  struct.NET_UI.html  struct.UIList.html  struct.UIListInner.html
adbfbinlib/net/: index.html  sidebar-items.js  struct.Net.html
adbfbinlib/net/behavior/: fn.build_noise_transport.html  index.html  sidebar-items.js  struct.AdbfBehavior.html
adbfbinlib/net/sm/: enum.Error.html  enum.Events.html  enum.States.html  index.html  sidebar-items.js  struct.AdbfStateChart.html  struct.Go.html  struct.NewPeerData.html  struct.StartData.html  struct.StateMachine.html  struct.UpdateData.html  trait.StateMachineContext.html
adbfbinlib/net/sm_behaviour/: enum.SMOutEvents.html  enum.sm_to_net.html  index.html  sidebar-items.js  struct.SMBehaviour.html
adbfbinlib/net/storage/: enum.MkadKeys.html  index.html  sidebar-items.js  struct.NetStorage.html
adbfbinlib/net/subs/: index.html  sidebar-items.js
adbfbinlib/net/ui_data/: index.html  (+2 more)
adbfbinlib/shared/: fn.collection_search.html  fn.net_search.html  index.html  sidebar-items.js
android/: .gitignore
android/app/: build.gradle
audiobookfinder/: all.html  fn.main.html  index.html  sidebar-items.js
audiobookfinder/command_line/: constant.AUTHORS.html  constant.DESCRIPTION.html  fn.get_start_values.html  index.html  sidebar-items.js  static.APP_TITLE.html  static.ARG_BROWSER.html  static.ARG_BROWSER_PORT.html  static.ARG_KEEP_ALIVE.html  static.ARG_NET.html  static.ARG_TUI.html  static.ARG_WEBUI.html  static.INPUT_FOLDERS.html
ci/: before_deploy.sh  compile.sh  document.sh  install.sh  script.sh
docs/: changes.md  diag_architecture_general.xml  release_changes.md  sheep.icns
implementors/lazy_static/: trait.LazyStatic.js
ios/Runner.xcodeproj/: project.pbxproj
lib/: license_tab.dart  main.dart  peer_tab.dart  search_tab.dart
licenses/: js_ws_events_dispatcher.txt
native/adbflib/: Cargo.toml
native/adbflib-ffi/: .gitignore  Cargo.toml  build.rs
native/adbflib-ffi/src/: lib.rs
native/adbflib/src/: command_line.rs  forwarder.rs  lib.rs  main.rs  shared.rs
native/adbflib/src/common/: config.rs  logit.rs  paths.rs
native/adbflib/src/ctrl/: mod.rs
native/adbflib/src/ctrl/tui/: mod.rs
native/adbflib/src/ctrl/webui/: actors.rs  json.rs  mod.rs  pages.rs
native/adbflib/src/ctrl/webui/html/: main_page.html  peer_page.html
native/adbflib/src/ctrl/webui/js/: app.js  ws_events_dispatcher.js
native/adbflib/src/data/: audio_info.rs  bktree.rs  collection.rs  ipc.rs  mod.rs  tag_readers.rs
native/adbflib/src/net/: behavior.rs  mod.rs  sm.rs  sm_behaviour.rs  storage.rs  ui_data.rs
native/adbflib/src/net/subs/: key_keeper.rs  mod.rs  peer_representation.rs
src/: command_line.rs  common.rs  config.rs  lib.rs  logit.rs  main.rs  paths.rs
src/adbfbinlib/: forwarder.rs.html  lib.rs.html  shared.rs.html
src/audiobookfinder/: command_line.rs.html  main.rs.html
src/common/: config.rs  mod.rs  paths.rs  startup.rs
src/ctrl/: mod.rs
src/data/: audio_info.rs  bktree.rs  collection.rs  ipc.rs  mod.rs  tag_readers.rs
src/net/: behavior.rs  com_client.rs  com_server.rs  data.rs  key_keeper.rs  mod.rs  net_actors.rs  noise.rs  peer_representation.rs  sm.rs  sm_behaviour.rs  static_secret.pk8  storage.rs  ui_data.rs
src/tui/: mod.rs
testaudio/: Read.txt
(+198 files in other folders)
