[package]
edition = "2018"
name = "audiobookfinder"
version = "0.1.25"
authors = ["Sven Kroemeke <skroemeke@gmail.com>"]
license = "MIT" # http://spdx.org/licenses/
repository = "https://github.com/electricherd/audiobookfinder"
readme = "README.md"
documentation = "https://electricherd.github.io/audiobookfinder/audiobookfinder/"
keywords = ["rust", "tui", "mdns", "libp2p", "webui", "websockets", "actix"]
publish = false
homepage = "https://github.com/electricherd/audiobookfinder"
description = "A program to collect information from audio books, gathered from multiple clients."

[badges]
appveyor = { repository = "audiobookfinder", branch = "master", service = "github" }
travis-ci = { repository = "electricherd/audiobookfinder", branch = "master" }
maintenance = { status = "actively-developed" }

[lib]
name = "adbflib"
path = "src/lib.rs"
bench = true

[[bin]]
name = "audiobookfinder"
path = "src/main.rs"

# ################################################################################

[dependencies]
async-std = "1.6"     # great async
crossbeam = "0.7"     # a mpmc library also with Workgroup instead of std::thread::barrier
serde = "1.0"         # serialize anything, awesome for communication items
serde_derive = "1.0"  # macro usage from serde


clap = "2.33"         # for the command line parsing
dirs = "3.0"          # to browse dirs fast in taglib
lazy_static = "1.4"   # awesome lib for lazy data structures

hostname = "^0.3"    # for host recognition
log = { version="0.4", features = ["release_max_level_off"]}    # basic log feature
env_logger = "0.7"     # alongside log for logging
flexi_logger = {version = "0.15", features = ["colors"] }  # a more flexible logger
syslog = "5.0"           # another logger for system log

futures = "0.3"     ####   # futures, used in state machine yet (and in many other crates)
futures-util = "0.3"

tree_magic = "0.2"  # for fast file tree operations
id3 = "0.5"         # id3 tags

rayon = "1.3"       # for multi-threading, very good

actix = "0.9"         # basic for webserver
actix-web = "2.0"     # for mini webserver and websocket
actix-files = "0.2"
actix-web-actors = "2.0"

webbrowser = "0.5"    # for opening webpage on machine
get_if_addrs = "0.5"  # for range of localhosts

smlang = "0.3"        # state machine for client server communication for data exchange
serde_json = "1.0"    # couldn't find actix json to work, this is good and well documented
bincode = "1.3.1"     # for binary serialization

# libp2p network stack for secure p2p with mdns and general communication
libp2p = "0.21.0"
libp2p-core = "0.20.0"
libp2p-tcp = "0.20.0"
libp2p-noise = "0.20.0"

# cursive is the tui
[dependencies.cursive]
version = "0.15"
default-features = false
[features]
default = ["cursive/crossterm-backend"]
system-alloc = []

# ############################################################################
# see https://doc.rust-lang.org/cargo/reference/profiles.html
# profiles
[profile.release]
codegen-units = 8
