[workspace]
members = ["native/*"]

[profile.release]
lto = true
codegen-units = 1
debug = true

# ############################################################################
# see https://doc.rust-lang.org/cargo/reference/profiles.html
# profiles
[profile.release.package.adbflib]
codegen-units = 8

# until this is resolved https://github.com/Lymia/enumset/issues/17
[patch.crates-io.enumset_derive]
git = "https://github.com/ocboogie/enumset"
branch = "span-fix"