[package]
edition = "2018"
name = "adbflib"
version = "0.1.39"
authors = ["Sven Kroemeke <skroemeke@gmail.com>"]
license = "MIT" # http://spdx.org/licenses/
repository = "https://github.com/electricherd/audiobookfinder"
readme = "README.md"
documentation = "https://electricherd.github.io/audiobookfinder/audiobookfinder/"
keywords = ["rust", "tui", "mdns", "libp2p", "webui", "websockets", "actix", "rayon", "id3tag", "http-server", "flutterust", "flutter", "dart"]
publish = false
homepage = "https://github.com/electricherd/audiobookfinder"
description = "A program to collect information from audio books, gathered from multiple clients."

[badges]
appveyor = { repository = "audiobookfinder", branch = "master", service = "github" }
travis-ci = { repository = "electricherd/audiobookfinder", branch = "master" }
maintenance = { status = "actively-developed" }

[lib]
name = "adbfbinlib"
path = "src/lib.rs"
bench = true

[[bin]]
name = "audiobookfinder"
path = "src/main.rs"

# ################################################################################

[features]
default = ["cursive/crossterm-backend"]
system-alloc = []


[dependencies]
async-std = "1.8"     # great async
crossbeam = "0.8"     # a mpmc library also with Workgroup instead of std::thread::barrier
serde = "1.0"         # serialize anything, awesome for communication items
serde_derive = "1.0"  # macro usage from serde
ctrlc = "3.1"         # ctrl-c break events in main
exitcode = "1.1"      # for ctrlc exit codes
regex = "1.4"         # for html replacement

clap = "2.33"         # for the command line parsing
dirs = "3.0"          # to browse dirs fast in taglib
lazy_static = "1.4"   # awesome lib for lazy data structures

hostname = "^0.3"    # for host recognition
log = { version="0.4", features = ["release_max_level_off"]}    # basic log feature
env_logger = "0.8"     # alongside log for logging
flexi_logger = {version = "0.16", features = ["colors"] }  # a more flexible logger
syslog = "5.0"           # another logger for system log

futures = "0.3"     ####   # futures, used in state machine yet (and in many other crates)
futures-util = "0.3"

tree_magic_mini = "1.0"  # for faster file tree operations
mp4ameta = "0.8"       # for mp4 audio metadata
mp3-metadata = "0.3"
id3 = "0.5"              # id3 tags
metaflac = "0.2"

num_cpus = "1.13"   # addition to rayon for cpu count
rayon = "1.5"       # for multi-threading, very good

actix = "0.10"         # basic for webserver
actix-web = "3.3"     # for mini webserver and websocket
actix-files = "0.5"
actix-web-actors = "3.0"

if-addrs = "0.6"  # for range of localhosts

smlang = "0.3"        # state machine for client server communication for data exchange
serde_json = "1.0"    # couldn't find actix json to work, this is good and well documented
bincode = "1.3"     # for binary serialization

# libp2p network stack for secure p2p with mdns and general communication
libp2p = "0.33"
libp2p-tcp = "0.26"
libp2p-noise = "0.28"

# cursive is the tui
[dependencies.cursive]
version = "0.15"
default-features = false

# https://doc.rust-lang.org/reference/conditional-compilation.html
# needed because github actions build is some other kind and breaks
# the build.
# important: has to be the same as used in "webbrowser" crate
[target.'cfg(any(target_os = "android", target_os = "windows", target_os = "macos", target_os = "linux", target_os = "freebsd", targest_os = "netbsd",target_os = "openbsd", target_os = "haiku", target_arch = "wasm32"))'.dependencies]
webbrowser = "0.5"

# https://crates.io/crates/cargo-deb
[package.metadata.deb]
name="audiobookfinder"
license-file = ["../../LICENSE", "4"]
extended-description = """\
A multi-agend local network program to search and share audiobook data \
over the network, even with the supplied mobile app."""
section = "network"
priority = "optional"
assets = [
    ["target/release/audiobookfinder", "usr/bin/", "755"],
    ["../../README-release.md", "usr/share/doc/audiobookfinder/README.md", "644"],
    ["../../LICENSE", "usr/share/doc/audiobookfinder/LICENSE", "644"],
]